--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,12 +11,12 @@ anyhow = "1.0"
 as-result = "0.2"
 async-barrier = "1.1"
 async-fs = "1.5"
-async-global-executor = "1.4"
 async-io = "1.1"
 # Blocked on Ubuntu
 async-process = "=0.1.1"
 # Blocked on Ubuntu
 async-stream = "=0.2"
+async-task = "4.0"
 derive_more = "0.99"
 flume = "0.9"
 futures = "0.3"
@@ -26,6 +26,7 @@ hex = "0.4"
 isahc = "0.9.10"
 md-5 = "0.9"
 procfs = "0.8"
+smolscale = "0.1"
 thiserror = "1.0"
 
 [dev-dependencies]
