--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "apt-cmd"
 description = "Async library for interacting with the apt commands"
-version = "0.1.0"
+version = "0.1.1"
 license = "LGPL-3.0"
 authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
 edition = "2018"
@@ -12,23 +12,19 @@ as-result = "0.2"
 async-barrier = "1.1"
 async-fs = "1.5"
 async-io = "1.1"
-# Blocked on Ubuntu
-async-process = "=0.1.1"
-# Blocked on Ubuntu
-async-stream = "=0.2"
+async-process = "1.1"
+async-stream = "0.3"
 async-task = "4.0"
 derive_more = "0.99"
-flume = "0.9"
+flume = "0.10"
 futures = "0.3"
 futures-util = "0.3"
 hex = "0.4"
-# Can switch to surf 2.0.0 after Rust 1.46 reaches Ubuntu
-isahc = "0.9.10"
+isahc = "1.3"
 md-5 = "0.9"
-procfs = "0.8"
-smolscale = "0.1"
+procfs = "0.9"
+smolscale = "0.2"
 thiserror = "1.0"
 
 [dev-dependencies]
 anyhow = "1.0"
-
