--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "apt-cmd"
-description = "Async library for interacting with the apt commands"
-version = "0.1.1"
+description = "Async library for interacting with apt commands"
+version = "0.1.2"
 license = "LGPL-3.0"
 authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
 edition = "2018"
