feat!: Utilize async-fetcher for package fetching

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,14 +12,14 @@ anyhow = "1.0.53"
 as-result = "0.2.1"
 async-stream = "0.3.2"
 derive_more = "0.99.17"
-futures = "0.3.19"
-futures-util = "0.3.19"
+futures = "0.3.21"
 hex = "0.4.3"
 isahc = "1.6.0"
 md-5 = "0.10.0"
 procfs = "0.12.0"
 sha-1 = "0.10.0"
 thiserror = "1.0.30"
+async-fetcher = "0.7.0"
 
 [dependencies.tokio]
 version = "1.16.1"
