--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ md-5 = "0.10.0"
 procfs = "0.12.0"
 sha-1 = "0.10.0"
 thiserror = "1.0.30"
+async-shutdown = "0.1.2"
 
 [dependencies.async-fetcher]
 git = "https://github.com/pop-os/async-fetcher"
@@ -32,7 +33,7 @@ version = "0.1.8"
 features = ["io-util"]
 
 [dependencies.tokio-util]
-version = "0.6.9"
+version = "0.7.0"
 features = ["compat"]
 
 [dev-dependencies.tokio]
