--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,8 @@ thiserror = "1.0.30"
 async-shutdown = "0.1.2"
 
 [dependencies.async-fetcher]
-git = "https://github.com/pop-os/async-fetcher"
+# git = "https://github.com/pop-os/async-fetcher"
+version = "0.8.0"
 
 [dependencies.tokio]
 version = "1.16.1"
