--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ procfs = "0.12.0"
 sha-1 = "0.10.0"
 thiserror = "1.0.30"
 async-shutdown = "0.1.2"
+rayon = "1.5.1"
 
 [dependencies.async-fetcher]
 git = "https://github.com/pop-os/async-fetcher"
