feat: Add downgradable_packages function

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
 edition = "2018"
 
 [dependencies]
-anyhow = "1.0.56"
+anyhow = "1.0.57"
 as-result = "0.2.1"
 async-stream = "0.3.3"
 derive_more = "0.99.17"
@@ -17,15 +17,16 @@ hex = "0.4.3"
 md-5 = "0.10.1"
 procfs = "0.12.0"
 sha-1 = "0.10.0"
-thiserror = "1.0.30"
+thiserror = "1.0.31"
 async-shutdown = "0.1.2"
 rayon = "1.5.2"
+deb-version = "0.1.1"
 
 [dependencies.async-fetcher]
 git = "https://github.com/pop-os/async-fetcher"
 
 [dependencies.tokio]
-version = "1.17.0"
+version = "1.18.1"
 features = ["fs", "io-util", "process", "rt", "sync", "time"]
 
 [dependencies.tokio-stream]
@@ -37,7 +38,7 @@ version = "0.7.1"
 features = ["compat"]
 
 [dev-dependencies.tokio]
-version = "1.17.0"
+version = "1.18.1"
 features = ["full"]
 
 [features]
