--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,39 +9,28 @@ edition = "2018"
 repository = "https://github.com/pop-os/apt-cmd"
 
 [dependencies]
-anyhow = "1.0.66"
+anyhow = "1.0.83"
 as-result = "0.2.1"
-async-stream = "0.3.3"
+async-fetcher = "0.11.0"
+async-stream = "0.3.5"
 derive_more = "0.99.17"
-futures = "0.3.25"
+futures = "0.3.30"
 hex = "0.4.3"
-md-5 = "0.10.5"
-procfs = "0.14.1"
-sha-1 = "0.10.0"
-thiserror = "1.0.37"
-async-shutdown = "0.1.2"
-rayon = "1.5.3"
+md-5 = "0.10.6"
+procfs = "0.16.0"
+sha-1 = "0.10.1"
+thiserror = "1.0.60"
+rayon = "1.10.0"
 deb-version = "0.1.1"
 
-[dependencies.async-fetcher]
-version = "0.10.0"
-
 [dependencies.tokio]
-version = "1.21.2"
+version = "1.37.0"
 features = ["fs", "io-util", "process", "rt", "sync", "time"]
 
 [dependencies.tokio-stream]
-version = "0.1.11"
+version = "0.1.15"
 features = ["io-util"]
 
-[dependencies.tokio-util]
-version = "0.7.4"
-features = ["compat"]
-
 [dev-dependencies.tokio]
-version = "1.21.2"
+version = "1.37.0"
 features = ["full"]
-
-[features]
-isahc = ["async-fetcher/isahc"]
-reqwest = ["async-fetcher/reqwest"]
